scripts/k8s/01-auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: auth
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
        version: 0.0.1
    spec:
      containers:
        - name: auth
          image: auth:0.0.1
          imagePullPolicy: Never
          ports:
            # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
            - containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: auth
