scripts/k8s/01-composition.yml
apiVersion: v1
kind: Service
metadata:
  name: composition-service
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: composition
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composition-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: composition
        version: 0.0.1
    spec:
      containers:
        - name: composition
          image: composition:0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: composition
