scripts/k8s/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: auth
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
        version: 0.0.1
    spec:
      containers:
        - name: auth
          image: auth:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
  selector:
    matchLabels:
      app: auth
