scripts/k8s/comments.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: comments
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: comments
        version: 0.0.1
    spec:
      containers:
        - name: comments
          image: comments:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: comments
