scripts/k8s/02-gateway.yml
# @link https://istio.io/latest/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: workshop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
# @link https://istio.io/latest/docs/concepts/traffic-management/#virtual-services
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-route
spec:
  hosts:
    - "*"
  gateways:
    - workshop-gateway
  http:
    - match:
        - uri:
            exact: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /posts
      route:
        - destination:
            host: posts-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /comments
      route:
        - destination:
            host: comments-service
            port:
              number: 80
    - match:
        - uri:
            exact: /composition
      route:
        - destination:
            host: composition-service
            port:
              number: 80
      rewrite:
        uri: '/'
