scripts/k8s/06-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-route
spec:
  hosts:
    - "*"
  gateways:
    - workshop-gateway
  http:
    - match:
        - uri:
            exact: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /posts
      route:
        - destination:
            host: posts-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /comments
      fault:
        delay:
          fixedDelay: 5s
          percentage:
            value: 33
        abort:
          httpStatus: 500
          percentage:
            value: 33
      route:
        - destination:
            host: comments-service
            port:
              number: 3000
    - match:
        - uri:
            exact: /composition
      route:
        - destination:
            host: composition-service
            port:
              number: 3000
      rewrite:
        uri: '/'
